--- a/pricing-html-css/index.html
+++ b/pricing-html-css/index.html
@@ -12,6 +12,8 @@
       sizes="32x32"
       href="./images/favicon-32x32.png"
     />
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&display=swap" rel="stylesheet" />
 
     <title>Pricing component</title>
 
@@ -32,5 +34,19 @@
         <label> Monthly</label>
       </div>
     </header>
+    
+    <!-- card component -->
+    <div class="cards">
+      <div class="card shadow">
+        <ul>
+          <li class="pack">Basic</li>
+          <li id="basic" class="price bottom-bar">&dollar;199.99</li>
+          <li class="bottom-bar">500 GB Storage</li>
+          <li class="bottom-bar">2 Users Allowed</li>
+          <li class="bottom-bar">Send up to 3 GB</li>
+          <li><button class="btn">LEARN MORE</button></li>
+        </ul>
+      </div>
+
   </body>
 </html>
