--- a/pricing-html-css/index.html
+++ b/pricing-html-css/index.html
@@ -47,6 +47,27 @@
           <li><button class="btn">LEARN MORE</button></li>
         </ul>
       </div>
+      <div class="card active">
+        <ul>
+          <li class="pack">Professional</li>
+          <li id="professional" class="price bottom-bar">&dollar;249.99</li>
+          <li class="bottom-bar">1 TB Storage</li>
+          <li class="bottom-bar">5 Users Allowed</li>
+          <li class="bottom-bar">Send up to 10 GB</li>
+          <li><button class="btn active-btn">LEARN MORE</button></li>
+        </ul>
+      </div>
+      <div class="card shadow">
+        <ul>
+          <li class="pack">Master</li>
+          <li id="master" class="price bottom-bar">&dollar;399.99</li>
+          <li class="bottom-bar">2 TB Storage</li>
+          <li class="bottom-bar">10 Users Allowed</li>
+          <li class="bottom-bar">Send up to 20 GB</li>
+          <li><button class="btn">LEARN MORE</button></li>
+        </ul>
+      </div>
 
+    </div>
   </body>
 </html>
