Added Background images

--- a/pricing-html-css/index.html
+++ b/pricing-html-css/index.html
@@ -69,5 +69,11 @@
       </div>
 
     </div>
+    <div class="top-img">
+      <img src="images/bg-top.svg" alt="">
+    </div>
+    <div class="bottom-img">
+      <img src="images/bg-bottom.svg" alt="">
+    </div>
   </body>
 </html>
